[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["Ryota Kojima <ryotakojima@RyotanoMacBook-Pro.local>"]
readme = "README.md"
packages = [{ include = "ai_agent", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = "^0.3.25"
langchain-community = "^0.3.25"
llama-cpp-python = {version = "^0.3.9", extras = ["server"]}
python-dotenv = "^1.1.0"
huggingface-hub = "^0.33.0"
gradio = "^5.34.1"
langchain-core = "^0.3.65"
faiss-cpu = "^1.11.0"
duckduckgo-search = "^8.0.4"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
